--- a/.github/workflows/ci-push-dockerhub.yml
+++ b/.github/workflows/ci-push-dockerhub.yml
@@ -93,3 +93,4 @@ jobs:
             docker rm flask-hello || true
            
             docker run -d --name flask-hello --restart unless-stopped -p 80:5000 ${{ env.IMAGE_NAME }}:latest
+ SSHSS
