--- a/.github/workflows/ci-push-dockerhub.yml
+++ b/.github/workflows/ci-push-dockerhub.yml
@@ -1,56 +1,58 @@
 name: CI → Build, Scan, Push to Docker Hub & Deploy
 
-
 on:
- 
- push:    branches: [ "main" ]
+  push:
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 
 env:
   IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/flask-hello-simple
 
-
 jobs:
   ci:
     runs-on: ubuntu-latest
+
     steps:
+      # ----------------------------
+      # Checkout source
+      # ----------------------------
       - name: Checkout code
         uses: actions/checkout@v4
 
-
+      # ----------------------------
+      # Python setup & tests
+      # ----------------------------
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-
-      - name: Install Python deps
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
+          pip install bandit pip-audit pytest
 
       - name: Run tests
         env:
           PYTHONPATH: ${{ github.workspace }}
         run: pytest -q
 
-
+      # ----------------------------
+      # Security scans (non-blocking)
+      # ----------------------------
       - name: Run Bandit (SAST)
-        run: |
-          bandit -r . || true
-
+        run: bandit -r . || true
 
       - name: Run pip-audit (SCA)
-        run: |
-          pip-audit --output-format text || true
+        run: pip-audit --output-format text || true
 
-
+      # ----------------------------
+      # Docker build & push
+      # ----------------------------
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -58,27 +60,32 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-
-      - name: Build Docker image and tag latest + SHA
+      - name: Build Docker image (latest + SHA)
         run: |
-          docker build -t ${{ env.IMAGE_NAME }}:${{ github.sha }} -t ${{ env.IMAGE_NAME }}:latest .
+          docker build \
+            -t ${{ env.IMAGE_NAME }}:${{ github.sha }} \
+            -t ${{ env.IMAGE_NAME }}:latest \
+            .
 
-
-      - name: Scan Docker image with Trivy (run CLI)
+      # ----------------------------
+      # Image scan (non-blocking)
+      # ----------------------------
+      - name: Scan Docker image with Trivy
         run: |
-          docker pull aquasec/trivy:latest
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy:latest image --format table ${{ env.IMAGE_NAME }}:${{ github.sha }} || true
+          docker run --rm \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            aquasec/trivy:latest image \
+            --format table \
+            ${{ env.IMAGE_NAME }}:${{ github.sha }} || true
 
-
-
-
-      - name: Push image to Docker Hub (latest & sha)
+      - name: Push Docker image
         run: |
           docker push ${{ env.IMAGE_NAME }}:${{ github.sha }}
           docker push ${{ env.IMAGE_NAME }}:latest
 
-
-      # Optional deploy step (only runs on main branch)
+      # ----------------------------
+      # Deploy (main branch only)
+      # ----------------------------
       - name: Deploy to remote server via SSH
         if: github.ref == 'refs/heads/main'
         uses: appleboy/ssh-action@v0.1.8
@@ -87,9 +94,17 @@ jobs:
           username: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_KEY }}
           script: |
-            docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_TOKEN }}
+            docker login \
+              --username ${{ secrets.DOCKERHUB_USERNAME }} \
+              --password ${{ secrets.DOCKERHUB_TOKEN }}
+
             docker pull ${{ env.IMAGE_NAME }}:latest
+
             docker stop flask-hello || true
             docker rm flask-hello || true
-           
-            docker run -d --name flask-hello --restart unless-stopped -p 80:5000 ${{ env.IMAGE_NAME }}:latest
+
+            docker run -d \
+              --name flask-hello \
+              --restart unless-stopped \
+              -p 80:5000 \
+              ${{ env.IMAGE_NAME }}:latest
